--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.17",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8"
   }
 }
