--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bignumber.js": "^9.1.0",
+    "date-fns-tz": "^1.3.7",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
