--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "homepage": "https://junw3i.github.io/highcharts-playground",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uniswap/sdk-core": "^3.1.0",
+    "@uniswap/v3-sdk": "^3.9.0",
     "bignumber.js": "^9.1.0",
     "date-fns-tz": "^1.3.7",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
+    "jsbi": "3.2.5",
+    "lodash.keyby": "^4.6.0",
+    "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^3.0.0",
+    "redux-saga": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
